diesel_compile_tests/tests/fail/derive/selectable.stderr
error: references are not supported in `Queryable` types
       consider using `std::borrow::Cow<'a, str>` instead
  --> tests/fail/derive/selectable.rs:38:11
   |
LL |     name: &'a str,
   |           ^

error[E0308]: mismatched types
  --> tests/fail/derive/selectable.rs:27:29
   |
LL |         select_expression = (users::id + 45),
   |                             ^^^^^^^^^^^^^^^^ expected `id`, found `Add<id, Bound<Integer, i32>>`
   |
   = note: expected struct `columns::id`
              found struct `diesel::expression::ops::numeric::Add<columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>`
For more information about this error, try `rustc --explain E0308`.
